<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">>
    <string name="hint_operator_name">你好</string>
    <string name="hello">Hello World, Date!</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="cancel">取 消</string>
    <string name="account_empty">用户名为空，请重新输入！</string>
    <string name="pwd_empty">密码为空，请重新输入！</string>
    <string name="pwd_not_fit_user">密码不正确，请重新输入！</string>
    <string name="pwd_new_empty">新密码为空，请重新输入！</string>
    <string name="pwd_check_empty">密码确认为空，请重新输入！</string>
    <string name="pwd_not_the_same">密码确认不正确，请重新输入密码！</string>
    <string name="register_fail">注册用户失败，请重新尝试！</string>
    <string name="register_success">注册成功！</string>
    <string name="resetpwd_fail">密码修改失败，请重新尝试！</string>
    <string name="resetpwd_success">密码修改成功！</string>
    <string name="login_success">登陆成功！</string>
    <string name="cancel_success">注销成功！</string>
    <string name="login_fail">登录失败！请输入正确的用户名与密码！</string>
    <string name="cancel_fail">注销失败！请输入正确的用户名与密码！</string>
    <string name="name_already_exist">用户名【<xliff:g example="tom" id="id1">%1$s</xliff:g>】已存在，请重新输入！</string>
    <string name="name_not_exist">用户名【<xliff:g example="tom" id="id1">%1$s</xliff:g>】不存在，请重新输入！</string>
    <string name="user_login_success">用户：<xliff:g example="tom" id="id2">%1$s</xliff:g>登录，欢迎光临！</string>
    <string name="app_name">发酵罐</string>
    <string name="chengxuduan">程 序 段</string>
    <string name="shengyushijian">剩余时间</string>
    <string name="dangqianwendu">当前温度</string>
    <string name="dangqianyali">当前压力</string>
    <string name="yunxingzhuangtai">运行状态</string>
    <string name="guzhangzhuangtai">故障状态</string>
    <string name="qidongshangliao">启动上料</string>
    <string name="qidongxieliao">启动卸料</string>
    <string name="qidongfajiao">启动发酵</string>
    <string name="qidongqingwu">启动清污</string>
    <string name="zidongyunxing">自动运行</string>
    <string name="zantingyunxing">暂停运行</string>
    <string name="dangqianzhongliang">当前重量</string>
    <string name="yujiwancheng">预计完成</string>
    <string name="gongzuomoshi">工作模式</string>
    <string name="banzidong">半自动</string>
    <string name="quanzidong">全自动</string>
    <string name="fajiaowancheng">发酵完成</string>
    <string name="shangliao">上料</string>
    <string name="xieliao">卸料</string>
    <string name="kaiqi">开启</string>
    <string name="guanbi">关闭</string>
    <string name="fajiao">发酵</string>
    <string name="qidong">启动</string>
    <string name="tingzhi">停止</string>
    <string name="chuwei">除味</string>
    <string name="bengzhan">泵站</string>
    <string name="shangliaokai">上料</string>
    <string name="posuikai">破碎</string>
    <string name="xieliaokai">卸料</string>
    <string name="jiaobankai">搅拌</string>
    <string name="pingjiaokai">平绞</string>
    <string name="yurekai">预热</string>
    <string name="fuliaokai">辅料</string>
    <string name="honggankai">烘干</string>
    <string name="junzhongkai">菌种</string>
    <string name="fengjikai">风机</string>
    <string name="fudaikai">辅带</string>
    <string name="youbengkai">油泵</string>
    <string name="juanshe">圈舍</string>
    <string name="qingwukai">清污</string>
    <string name="shuru">输入</string>
    <string name="shuchu">输出</string>
    <string name="shusong">输送</string>
    <string name="tuichu">退出</string>
    <string name="jieru">接入</string>
    <string name="baojing">报警</string>
    <string name="jiebodai">接驳带</string>
</resources>
